# forecastout

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
forecastout/: __init__.py  config.yaml  core.py
forecastout/data_engine/: __init__.py  data_handler.py  train_test_split.py
forecastout/disaggregation_engine/: __init__.py  disaggregate_monthly_to_daily_forecast.py  disaggregation_model_factory.py  disaggregation_model_predictor.py  disaggregation_model_trainer.py  get_daily_shares.py  remake_monthly_forecast_current_month.py
forecastout/disaggregation_features/: add_features.py  feature_creator.py  feature_encoding.py  feature_normalizer.py
forecastout/disaggregation_models/: abstract_model.py  random_forest_model.py
forecastout/forecast_engine/: __init__.py  anomaly_detector.py  anomaly_fixer.py  backtester.py  decompose_time_series.py  ensemble_models.py  ensembler.py  forecast_model_factory.py  model_predictor.py  model_trainer.py
forecastout/forecast_models/: abstract_model.py  autoarima_model.py  holtwinters_model.py  naive_seasonal.py  prophet_model.py
forecastout/utils/: __init__.py  input_checker.py  update_config.py
tests/data_engine/: test_data_handler.py  test_train_test_split.py
tests/disaggregation_engine/: disaggregation_engine_test.py  test_disaggregate_monthly_to_daily_forecast.py  test_remake_monthly_forecast_current_month.py
tests/disaggregation_features/: test_add_features.py  test_feature_creator.py  test_feature_enconding.py  test_feature_normalizer.py
tests/disaggregation_models/: random_forest_model_test.py
(+9 files in other folders)
